OneMaster/efk/ingress.kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-system
spec:
  rules:
  - host: k8s.kibana
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
